--- a/site/css/docs.css
+++ b/site/css/docs.css
@@ -1,5 +1,6 @@
 main {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -28,7 +29,7 @@ main {
   width: 40px; 
   height: 50px; 
   margin-left: 20px;
-  background-image: url('/img/pic/pdf.png');
+  background-image: url('/img/pdf.png');
   background-size: contain; 
   background-repeat: no-repeat; 
   flex-shrink: 0; 
@@ -43,7 +44,7 @@ main {
     width: 40px; 
     height: 40px; 
     margin-left: 20px;
-    background-image: url('/img/pic/direct-download.png');
+    background-image: url('/img/pdf-download.png');
     background-size: contain; 
     background-repeat: no-repeat; 
     flex-shrink: 0; 
