--- a/site/css/docs.css
+++ b/site/css/docs.css
@@ -9,6 +9,7 @@ main {
     flex-wrap: wrap;
     width: 880px;
     padding-top: 10px;
+    align-self: center;
 }
 
 .doc_item {
@@ -77,6 +78,7 @@ a img {
 a {
     text-decoration:none;
     color: black;
+    display: flex;
 }
 
 a:visited {
