--- a/site/css/main.css
+++ b/site/css/main.css
@@ -104,3 +104,47 @@ nav a:hover {
 
 }
 
+.images-premia {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.liter {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0px 25px 0px 25px;
+}
+
+.science {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px 40px 0px 40px;
+}
+
+.prizes {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+   
+
+}
+
+.prizes div {
+    margin: 0px 30px 30px 30px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+
+}
+
+.prizes p {
+    text-align: center;
+    font-size: 16px;
+    margin: 16px;
+
+}
+
