--- a/site/css/docs.css
+++ b/site/css/docs.css
@@ -21,9 +21,7 @@ main {
     margin: 15px;
     padding: 20px;
     padding-left: 20px;
-    /* border: 3px solid #000000; */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-    /* justify-content: center; */
 }
 
 .image {
@@ -50,6 +48,7 @@ main {
     background-repeat: no-repeat; 
     flex-shrink: 0; 
     justify-content: center;
+    transition: 0.2s;
 } 
 
 
@@ -60,10 +59,11 @@ main {
     height: 100px;
     margin-left: -20px;
     align-items: center;
+    text-align: justify;
 }
 
 .text {
-    /* width: 250px; */
+    font-size: 16px;
     text-align: left;
     margin-left: 20px;
     margin-right: 20px;
@@ -75,12 +75,17 @@ a img {
 
 a {
     text-decoration:none;
-    color: black;
+    color: #000;
     display: flex;
 }
 
+a:hover {
+    text-decoration: none;
+    color: #000;
+}
+
 a:visited {
-  color: rgb(119, 96, 96);
+  color: #000;
 }
 
 @media screen and (max-width: 1000px) {
